package laby;

public interface Observer {
    public void update(Subject s);
}
